Fix On scrolling overlaps start here link.

--- a/public/css/isa/main.css
+++ b/public/css/isa/main.css
@@ -358,7 +358,7 @@ section {
 }
 
 .header.sticked {
-  top: 46px !important;
+  top: 55px !important;
   /* background: rgba(240, 90, 34, 0.9); */
   background:rgba(255, 255, 255, 1);
   padding: 15px 0;
